include and require

--- a/include_require/header.html
+++ b/include_require/header.html
@@ -1,5 +1,5 @@
 <header>
-  <h2>Title example 2</h2>
+  <h2>Welcome</h2>
   <a href="index.php">Home</a>
   <a href="about.php">About</a>
   <a href="locations.php">Locations</a>
